react/src/styles/App.module.scss
body * {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    flex: none;
    -webkit-appearance: none;
    -moz-appearance: none;
}


body {
    font-family: sans-serif;
    font-size: 13px;
    line-height: 14px;
    background-color: #f9f0f0;
    color: #333333;
}


input {
    background: transparent;
    border: none;
    outline: none;
}


textarea {
    background-color: transparent;
    border: none;
    resize: none;
    outline: none;
}


button {
    background-color: transparent;
    border: none;
    outline: none;
}


label {
    font-weight: initial;
}

ul {
    list-style:none;
}

a,
a:hover,
a:link {
    color: inherit;
    text-decoration: none;
}

table {
    border-spacing: 0;
}

.content {
    width: calc(80vh + 384px + (12px * 2));
    margin-top: 55px;
    margin-left: auto;
    margin-right: auto;
    @media (orientation: portrait) {
        width: 100%;
    }


    .main-image + & {
        margin-top: 0;
    }


    &--no-scroll {
        position: absolute;
        top: 0;
        bottom: 0;
        width: 100%;
        display: flex;
        flex-direction: row;
        justify-content: center;
    }


    &--timetable {
        @media (orientation: portrait) {
            flex-direction: column-reverse;
        }
    }
}


.main-image {
    height: 400px;
    background: url(../static/img/review/search/bg.jpg) center 0;
    background-size: 100% auto;
    padding-top: 191px;
    @media (orientation: portrait) {
        height: 200px;
        padding-top: 91px;
    }


    .main-search {
        padding: 12px;
        width: calc(80vh + 384px);
        margin: 0 auto;
        display: flex;
        background-color: #ffffff;
        border-radius: 6px;
        box-shadow: 0 3px 0 0 #F3BEC6;
        font-size: 14px;
        line-height: 15px;
        @media (orientation: portrait) {
            width: calc(100% - 24px);
        }


        i {
            flex: 0 0 auto;
            margin-right: 8px;
            width: 13px;
            background: url(../static/icons/block_search.svg) no-repeat center center;
        }

        input {
            flex: 1 1 auto;
        }

        input::placeholder {
            color: #CCCCCC;
        }

        button {
            flex: 0 0 auto;
            margin-left: 8px;
        }
    }
}
/* ... */

